# learn-ffmpeg

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: attributes.h.32724271F31333D0.idx  avconfig.h.44090D53C42C19E7.idx  log.h.1199594B73F93DEE.idx  macros.h.BFC4439074C858D1.idx  main.cpp.A5B37E9F9A70737E.idx  version.h.FBF973CB0FACE770.idx
include/: AudioInfo.hpp  CircularBuffer.hpp
lib/ffmpeg/: CMakeLists.txt
src/: AudioInfo.cpp  decode.txt  main.cpp  testDecode.cpp  testFile.cpp  testFormat.cpp  testLog.cpp  testStreamPlay.cpp
